# GPUGemsVolumeRendering

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/01_basic_emissive/: CMakeLists.txt  main.cpp
apps/01_basic_emissive/shaders/: slice.frag  slice.vert
apps/02_transfer_functions/: CMakeLists.txt  main.cpp
apps/02_transfer_functions/shaders/: slice.vert  tf1d.frag  tf2d.frag
apps/03_illumination/: CMakeLists.txt  main.cpp
apps/03_illumination/shaders/: lit.frag  lit.vert
apps/04_volumetric_shadows/: CMakeLists.txt  main.cpp
apps/04_volumetric_shadows/shaders/: composite.frag  eye.frag  eye.vert  fullscreen.vert  light.frag  light.vert
apps/05_translucency/: CMakeLists.txt  main.cpp
apps/05_translucency/shaders/: composite.frag  eye.frag  eye.vert  fullscreen.vert  light.frag  light.vert
apps/06_procedural/: CMakeLists.txt  main.cpp
apps/06_procedural/shaders/: proc.frag  proc.vert
apps/07_volume_viewer/: CMakeLists.txt  main.cpp
apps/07_volume_viewer/shaders/: vol.frag  vol.vert
cmake/: CompileShaders.cmake  Dependencies.cmake
engine/: CMakeLists.txt
engine/include/vve/core/: Application.hpp  Log.hpp  Paths.hpp  Window.hpp
engine/include/vve/gfx/: Buffer.hpp  Context.hpp  PipelineBuilder.hpp  Renderer.hpp  ShaderModule.hpp  Swapchain.hpp  Texture.hpp  VulkanCommon.hpp
engine/include/vve/scene/: ArcballController.hpp  Camera.hpp
engine/include/vve/ui/: ImGuiLayer.hpp
engine/include/vve/volume/: GradientComputer.hpp  SliceGeometryBuffers.hpp  SliceProxyGeometry.hpp  TransferFunction.hpp  VolumeData.hpp  VolumeSource.hpp
engine/src/core/: Application.cpp  Paths.cpp  Window.cpp
engine/src/gfx/: Buffer.cpp  Context.cpp  PipelineBuilder.cpp  Renderer.cpp  ShaderModule.cpp  Swapchain.cpp  Texture.cpp  vma_impl.cpp
engine/src/scene/: ArcballController.cpp  Camera.cpp
engine/src/ui/: ImGuiLayer.cpp
engine/src/volume/: GradientComputer.cpp  SliceGeometryBuffers.cpp  SliceProxyGeometry.cpp  TransferFunction.cpp  VolumeData.cpp  VolumeSource.cpp
